# cargo-fetcher

./: Cargo.toml  README.md
src/: main.rs
src/downloader/: downloader.rs  mod.rs  resource.rs
